# forge-ingest

./: .dockerignore  .env.example  .gitignore  CONFIGURATION.md  Dockerfile  LICENSE  OPERATIONS.md  README.md  SECRETS.md  TROUBLESHOOTING.md  docker-compose.yml  ingest-urls.md  pyproject.toml
app/: auth.py  config.py  git_ops.py  logging_filter.py  main.py  pack.py
deploy/: caddy.example.caddy  generate-deploy-key.sh
secrets/: README.md
tests/: test_auth.py  test_pack.py
