[project]
name = "forge-ingest"
version = "0.1.0"
description = "Read-only Git forge repository packer for AI context"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*", "tests*", "secrets*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
